--- a/map.css
+++ b/map.css
@@ -1,11 +1,64 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #EE354E;
+}
+
+.content {
+  border-radius: 4px;
 }
 
 #map {
+  width: 70%;
   position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+}
+
+#affiliate {
+  position: absolute;
+  top: 10px;
+  left: 72%;
+  right: 10px;
+  bottom: 10px;
+  height: 96%;
+  background-color: #f4f4f2;
+  padding: 15px;
+}
+
+.social {
+  margin-right: 10px;
+  font-size: 1.5em;
+}
+
+ul {
+  margin: 0;
+  padding-left: 20px;
+}
+
+.photo, .social-links {
+  margin-bottom: 10px;
+}
+
+a .fa-facebook-official {
+  color: #3B5998;
+}
+a .fa-twitter-square {
+  color: #00aced;
+}
+
+a .fa-instagram {
+  color:  #000;
+}
+
+.img-thumbnail {
+  background-color: #000;
+  border: 3px solid #EE354E;
+}
+
+h3 {
+  margin-top: 10px;
+  font-size: 20px;
 }
