zoom to user location if available

--- a/map.css
+++ b/map.css
@@ -25,7 +25,7 @@ body {
   right: 10px;
   bottom: 10px;
   height: 96%;
-  background-color: #f1f1f0;
+  background-color: #F5E9C9;
   padding: 15px;
 }
 
