--- a/map.css
+++ b/map.css
@@ -100,7 +100,7 @@ h3 {
   width: auto;
 }
 
-/* https://www.sitepoint.com/create-calendar-icon-html5-css3/ */
+/* inspired by https://www.sitepoint.com/create-calendar-icon-html5-css3/ */
 time.icon
 {
   font-size: 0.7em;
@@ -109,9 +109,9 @@ time.icon
   width: 6em;
   height: 6em;
   background-color: #fff;
-  border-radius: 0.6em;
-  box-shadow: 0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd;
+  border-radius: 3px;
   overflow: hidden;
+  border: 1px solid #bdbdbd;
 }
 
 time.icon * {
@@ -127,21 +127,20 @@ time.icon .event-month {
   top: 0;
   padding: 0.4em 0;
   color: #fff;
-  background-color: #EE354E;
-  border-bottom: 1px dashed #fff;
-  box-shadow: 0 2px 0 #EE354E;
+  background-color: #339999;
+  border-bottom: 1px  #f37302;
 }
 
 time.icon .event-weekday {
   position: absolute;
   bottom: 0.3em;
-  color: #EE354E;
+  color: #000;
 }
 
 time.icon .event-date {
-  font-size: 1.6em;
+  font-size: 1.9em;
   letter-spacing: -0.05em;
-  padding-top: 1.6em;
+  padding-top: 1.1em;
   color: #2f2f2f;
   font-weight: bold;
 }
