events pre-launch fixes
- remove affiliate div that was causing a tan square in upper left
- update background color and event date calendar background color
- add affiliates layer after other events so affiliate events will be on top

--- a/map.css
+++ b/map.css
@@ -5,6 +5,10 @@ body {
   font-family: 'Roboto';
 }
 
+body.events {
+  background-color: #ed135c;
+}
+
 #mapApp {
   display: none;
 }
@@ -179,7 +183,7 @@ time.icon .event-month {
   top: 0;
   padding: 0.4em 0;
   color: #fff;
-  background-color: #339999;
+  background-color: #2d9fbd;
   border-bottom: 1px  #f37302;
 }
 
@@ -205,7 +209,7 @@ time.icon .event-date {
 
 .event-date-xs .event-month {
   color: #fff;
-  background-color: #339999;
+  background-color: #2d9fbd;
   padding: 1px;
   font-size: 0.9em;
 }
