add action network events to affiliates map
- get action network events in affiliates lambda
- show events from last 4 weeks, not just 2 days
- show place name (result from geocoding) instead of location, since location will be just a zip code for action network events
- add countries from events to affiliates for search box
- add event to action network results for consistency with affiliates sheet

--- a/map.css
+++ b/map.css
@@ -46,6 +46,11 @@ a {
     padding: 10px;
     display: none;
   }
+
+  #affiliateContent .name {
+    display: none;
+  }
+
   .affiliates .mapboxgl-popup-content .card-detail,
   .affiliates .mapboxgl-popup-content .event-list,
   .affiliates .mapboxgl-popup-close-button {
